--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name=“description” content=“stephan fenstemaker portfolio for cit 2506 web design class, elms college” />
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <link rel="icon" type="image/x-icon" href="assets\images\favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -92,7 +93,10 @@
         crossorigin="anonymous"></script>
     <!--Scripts End-->
     <footer>
-
+<!--
+    <div class="shadow" id="footer__background">
+   <p>Stephan Fenstemaker - 2024</p>
+ -->
     </footer>
 </body>
 
