lab 9 final pt 1

--- a/assets/labs/CITS2506-Lab-04/index.html
+++ b/assets/labs/CITS2506-Lab-04/index.html
@@ -2,8 +2,8 @@
 <html>
   
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Burgers and Beyond</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="icon" type="image/x-icon" href="favicon.png">
@@ -25,7 +25,7 @@
      <br>
      <h2>Welcome to Burgers and Beyond!</h2>    
      <p>
-       Newly opened in beautiful downtown Anywhere, Burgers and Beyond offers delicious burgers and a cozy diner atmosphere. Come find us at 123 Main St., Anywhere, U.S.A, we can’t wait to serve you!!
+       Newly opened in beautiful downtown Anywhere, Burgers and Beyond offers delicious burgers and a cozy diner atmosphere. Come find us at 123 Main St., Anywhere, U.S.A, we can’t wait to serve you!
      </p>
      <br>
     
