--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name=“description” content=“stephan fenstemaker portfolio for cit 2506 web design class, elms college” />
+    <meta name=“description” content=“stephan fenstemaker portfolio for cit 2506 web design class, elms college”>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <link rel="icon" type="image/x-icon" href="assets\images\favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -54,16 +54,22 @@
                         </a>
 
                         <ul class="dropdown-menu ">
-                            <li><a class="dropdown-item" href="assets\labs\CITS2506-Lab-03\index.html"
+                            <li><a class="dropdown-item" href="https://fenstemakers4.wixsite.com/my-site-1"
+                            target="labFrame-1">Intro to Wix CMS</a></li>
+                            <li><a class="dropdown-item" href="https://fenstemakers.wordpress.com/"
+                            target="labFrame-1">Intro to Wordpress CMS</a></li>
+                            <li><a class="dropdown-item" href="assets/labs/CITS2506-Lab-03/index.html"
                                     target="labFrame-1">Intro to HTML</a></li>
-                            <li><a class="dropdown-item" href="assets\labs\CITS2506-Lab-04\index.html"
+                            <li><a class="dropdown-item" href="assets/labs/CITS2506-Lab-04/index.html"
                                     target="labFrame-1">Intro to Multi-page HTML</a></li>
-                            <li><a class="dropdown-item" href="assets\labs\CITS2506-Lab-05\index.html"
+                            <li><a class="dropdown-item" href="assets/labs/CITS2506-Lab-05/index.html"
                                     target="labFrame-1">Intro to CSS</a></li>
-                            <li><a class="dropdown-item" href="assets\\labs\\CIT2506-Lab-06\\index.html"
+                            <li><a class="dropdown-item" href="assets/labs/CITS2506-Lab-06/index.html"
                                     target="labFrame-1">Intro to CSS Layouts</a></li>
-                            <li><a class="dropdown-item" href="assets\labs\CITS2506-Lab-07\index.html"
+                            <li><a class="dropdown-item" href="assets/labs/CITS2506-Lab-07/index.html"
                                     target="labFrame-1">Intro to Bootstrap</a></li>
+                            <li><a class="dropdown-item" href="assets/labs/CITS2506-Lab-08/index.html"
+                            target="labFrame-1">Advanced to Bootstrap</a></li>
                             <li>
                                 <hr class="dropdown-divider ">
                             </li>
