--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             </li>
                             <!-- Final Project Item -->
                             <li><a class="dropdown-item animate__animated animate__fadeIn animate__faster share-tech fst-italic"
-                                    id="dropdownFinal-link" href="#">FINAL PROJECT</a></li>
+                                    id="dropdownFinal-link" href="https://fenstemaker.net/" target="_blank">FINAL PROJECT</a></li>
                         </ul>
                     </li>
                     <!-- Drop Nav End-->
